--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/heaven"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".screens.FirstFragment">
+    tools:context=".ui.firstFragment.FirstFragment">
 
    <com.airbnb.lottie.LottieAnimationView
        android:layout_marginStart="5dp"
@@ -81,7 +81,7 @@
 
 
    <com.airbnb.lottie.LottieAnimationView
-     android:layout_marginBottom="30dp"
+     android:layout_marginBottom="80dp"
        android:textAlignment="center"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +105,20 @@
        app:layout_constraintBottom_toBottomOf="@+id/btnSumbit"
        app:layout_constraintEnd_toEndOf="@+id/btnSumbit"
        app:layout_constraintStart_toStartOf="@+id/btnSumbit" />
+
+
+   <TextView
+       android:textColor="@color/teal_200"
+       android:layout_margin="26dp"
+       android:fontFamily="@font/damion"
+       android:textSize="32dp"
+       android:text="History"
+       android:drawableEnd="@drawable/ic_heart"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:id="@+id/historytxt"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/>
 
 
 
