--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.lovecalculator.screens.FirstFragment"
+        android:name="com.example.lovecalculator.ui.firstFragment.FirstFragment"
         android:label="fragment_first"
         tools:layout="@layout/fragment_first" />
     <fragment
@@ -17,7 +17,12 @@
         tools:layout="@layout/fragment_board" />
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.lovecalculator.screens.SecondFragment"
+        android:name="com.example.lovecalculator.ui.secondFragment.SecondFragment"
         android:label="fragment_second"
         tools:layout="@layout/fragment_second" />
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="com.example.lovecalculator.ui.historyFragment.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
 </navigation>
