--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.historyFragment.HistoryFragment">
 
     <TextView
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:textColor="@color/teal_200"
         android:fontFamily="@font/damion"
         android:textAlignment="center"
@@ -23,7 +23,7 @@
        app:layout_constraintTop_toBottomOf="@+id/history"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="700dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_love_rv" />
 
