--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/heaven"
+    android:background="@drawable/image1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.firstFragment.FirstFragment">
 
-   <com.airbnb.lottie.LottieAnimationView
+   <!--<com.airbnb.lottie.LottieAnimationView
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
       app:layout_constraintTop_toTopOf="parent"
@@ -16,104 +16,48 @@
        android:id="@+id/anim"
        app:lottie_autoPlay="true"
        android:layout_width="140dp"
-       android:layout_height="140dp"/>
-
-   <TextView
-       android:id="@+id/lovetxt"
-       android:textSize="36sp"
-       android:textColor="@color/white"
-       android:text="Love Calculator"
-       android:fontFamily="@font/damion"
-       android:layout_marginStart="5dp"
-       app:layout_constraintBottom_toBottomOf="@+id/anim"
-       app:layout_constraintTop_toTopOf="@+id/anim"
-       app:layout_constraintStart_toEndOf="@+id/anim"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"/>
+       android:layout_height="140dp"/>-->
 
 
-
-   <com.google.android.material.textfield.TextInputLayout
-       android:id="@+id/editLayout"
-       android:layout_marginTop="230dp"
-       android:layout_marginHorizontal="42dp"
-       android:hint="Enter your name"
-       app:endIconMode="clear_text"
-       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
-       app:boxCornerRadiusTopStart="36dp"
-       app:boxCornerRadiusBottomEnd="36dp"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-
-      <com.google.android.material.textfield.TextInputEditText
+      <EditText
           android:id="@+id/firstNameEd"
           android:layout_width="match_parent"
+          app:layout_constraintTop_toTopOf="parent"
+          android:layout_marginTop="100dp"
           android:textColor="@color/white"
+          android:hint="Введите первое имя"
+          android:layout_marginHorizontal="20dp"
           android:layout_height="wrap_content"
           tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-   </com.google.android.material.textfield.TextInputLayout>
+      <EditText
 
-   <com.google.android.material.textfield.TextInputLayout
-       android:id="@+id/editLayoutSecond"
-       android:layout_marginTop="40dp"
-       android:layout_marginHorizontal="42dp"
-       android:hint="Enter your crush name"
-       app:endIconMode="clear_text"
-       app:boxCornerRadiusTopStart="36dp"
-       app:boxCornerRadiusBottomEnd="36dp"
-       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/editLayout"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-
-      <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/secondNameEd"
           android:layout_width="match_parent"
+          android:layout_marginHorizontal="20dp"
           android:textColor="@color/white"
+          app:layout_constraintTop_toBottomOf="@id/firstNameEd"
+          android:layout_marginTop="50dp"
+          android:hint="Введите второе имя"
           android:layout_height="wrap_content"
           tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-   </com.google.android.material.textfield.TextInputLayout>
-
-
-   <com.airbnb.lottie.LottieAnimationView
-     android:layout_marginBottom="80dp"
-       android:textAlignment="center"
-       android:layout_marginHorizontal="10dp"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintBottom_toBottomOf="parent"
-       android:id="@+id/btnSumbit"
-       app:lottie_autoPlay="true"
-       app:lottie_loop="true"
-       android:layout_width="match_parent"
-       android:layout_height="220dp"/>
-
-   <TextView
+   <Button
        android:id="@+id/calculate"
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:drawableEnd="@drawable/ic_heart"
-       android:fontFamily="@font/tangerine_bold"
-       android:text="calculate"
-       android:textColor="@color/white"
-       android:textSize="50sp"
-       android:layout_marginBottom="85dp"
-       app:layout_constraintBottom_toBottomOf="@+id/btnSumbit"
-       app:layout_constraintEnd_toEndOf="@+id/btnSumbit"
-       app:layout_constraintStart_toStartOf="@+id/btnSumbit" />
+       android:layout_marginHorizontal="20dp"
+       app:layout_constraintTop_toBottomOf="@id/secondNameEd"
+       android:text="Next"
+       android:layout_marginTop="20dp"
+       android:background="@color/white"/>
 
 
    <TextView
-       android:textColor="@color/teal_200"
+       android:textColor="@color/black"
        android:layout_margin="26dp"
-       android:fontFamily="@font/damion"
        android:textSize="32dp"
        android:text="History"
-       android:drawableEnd="@drawable/ic_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/historytxt"
