--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -3,25 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/heaven"
+    android:background="@drawable/image1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.secondFragment.SecondFragment">
 
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/heart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:lottie_autoPlay="true"
-        android:layout_margin="56dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="380dp"
-        android:layout_height="380dp"/>
-
     <TextView
         android:id="@+id/result_txt"
-        android:textSize="16sp"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="70dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,14 +29,14 @@
        android:textAlignment="center"
         android:layout_marginBottom="130dp"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/heart"
+        app:layout_constraintTop_toBottomOf="@id/result_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <Button
-        android:textColor="@color/teal_200"
+        android:textColor="@color/black"
         android:text="Try again"
-        android:background="@drawable/gradient"
+        android:background="@color/transparent"
         android:layout_marginHorizontal="50dp"
         android:id="@+id/tryAgain"
         android:layout_marginBottom="100dp"
