--- a/app/src/main/res/layout/pager_board.xml
+++ b/app/src/main/res/layout/pager_board.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="32dp"
-    android:background="@color/teal_700"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
 
@@ -23,28 +23,26 @@
         android:id="@+id/textTitle"
         android:layout_marginBottom="32dp"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:text="TITLE"
-        android:fontFamily="@font/damion"
         android:textSize="28sp"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/textDesc"
-        android:fontFamily="@font/akaya_telivigala"
         android:layout_width="wrap_content"
         android:text="Description"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/btnStart"
         android:layout_marginTop="16dp"
         android:text="Get started"
-        android:background="@drawable/gradient"
+        android:background="@color/black"
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
